fixed bug where searchbar had a gap on chrome and made completed items even easier to distinguish

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
@@ -120,6 +120,7 @@
 
 	.list-sidebar__table__data__overflow-container--completed-color {
 		color: $status-green;
+		font-weight: bold;
 	}
 
 	.list-sidebar__table__data__overflow-container__info__completed-icon {
