--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
@@ -107,6 +107,7 @@
 
 	.list-table__data--completed-color {
 		color: $status-green;
+		font-weight: bold;
 	}
 
 	.list-table__data__info__completed-icon {
